Closed
Bug 203183
Opened 22 years ago
Closed 20 years ago
Bookmarks context menu stays when clicking other menus
Categories
(Firefox :: Bookmarks & History, defect, P4)
Tracking
()
VERIFIED
FIXED
People
(Reporter: rmcabrera, Assigned: vlad)
References
Details
(Keywords: fixed-aviary1.0, fixed1.8)
Attachments
(3 files, 2 obsolete files)
|
7.49 KB,
patch
|
shaver
:
superreview+
bugs
:
approval-aviary+
|
Details | Diff | Splinter Review |
|
7.46 KB,
patch
|
roc
:
review+
roc
:
superreview+
mtschrep
:
approval1.8b5+
|
Details | Diff | Splinter Review |
|
6.79 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030422 Firebird™ Browser/0.6
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030422 Firebird™ Browser/0.6
The popup menu displayed when right-clicking a bookmark doesn't go away when
clicking another menu
Reproducible: Always
Steps to Reproduce:
1. You must have a bookmark hanging from the main "Bookmarks" menu
2. Right-click the bookmark. Popup menu appears
3. Move mouse to another top-level menu (Go, Tools, whatever)
Actual Results:
The popup menu belonging to a bookmark still shows on screen. Actions performed
on this menu do have the intended effect(open, delete, etc) on the bookmark
Expected Results:
Firebird should hide the popup menu when focus is taken away from the
"Bookmarks" menu
Using default theme, vanilla Firebird
Comment 2•22 years ago
|
||
Updating summary. This is probably related to bug 197112.
OS: Windows 2000 → All
Summary: Popup menu on bookmarks doesn't dissapear when clicking other menus → Bookmarks context menu stays when clicking other menus
Comment 3•22 years ago
|
||
*** Bug 204614 has been marked as a duplicate of this bug. ***
Comment 4•22 years ago
|
||
*** Bug 205719 has been marked as a duplicate of this bug. ***
Comment 5•22 years ago
|
||
*** Bug 206189 has been marked as a duplicate of this bug. ***
Comment 6•22 years ago
|
||
*** Bug 206223 has been marked as a duplicate of this bug. ***
Comment 8•22 years ago
|
||
*** Bug 220903 has been marked as a duplicate of this bug. ***
Comment 9•21 years ago
|
||
*** Bug 235928 has been marked as a duplicate of this bug. ***
Comment 10•21 years ago
|
||
*** Bug 237923 has been marked as a duplicate of this bug. ***
Comment 11•21 years ago
|
||
This also happens sporadically when right clicking bookmark FOLDERS. I am using
the latest nightly 20040320. It doesn't happen everytime, but I will right click
a folder in the bookmarks, and then click away on the current page, and the
context menu will stay. When I right click a bookmark and click away, this does
not occur. As long as the context menu stays on the screen, trying to right click
ANOTHER bookmark or bookmark folder acheives weird results, as in the context
menu not appearing at all or the context menu appearing BEHIND the bookmark menu.
Updated•21 years ago
|
Flags: blocking1.0?
Comment 12•21 years ago
|
||
*** Bug 242251 has been marked as a duplicate of this bug. ***
Comment 13•21 years ago
|
||
worth investigating before 1.0 due to dupecount.
Flags: blocking1.0? → blocking1.0+
Comment 14•21 years ago
|
||
*** Bug 243209 has been marked as a duplicate of this bug. ***
Comment 15•21 years ago
|
||
Confirmed.
- Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8a) Gecko/20040510
Firefox/0.8.0+
- Microsoft Windows 2000 Pro 5.00.2195 SP4
Comment 16•21 years ago
|
||
Because of Bug 203556 being fixed
http://bugzilla.mozilla.org/show_bug.cgi?id=203556 , now this bug applies to
Bookmark Toolbar context menus as well.
Comment 17•21 years ago
|
||
*** Bug 230790 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Priority: -- → P4
Comment 18•21 years ago
|
||
*** Bug 247315 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 19•21 years ago
|
||
Two instances of this bug:
1) Drop down Bookmarks menu, right-click on a bookmark. Move mouse
over another top-level menu (i.e. File). The context menu stays.
2) Drop down Bookmarks menu, right-click on a folder -before- the
folder submenu opens. You're correctly locked out until you move the
mouse back over the folder item, and let it hover there for the
submenu open timeout delay -- at which point the submenu appears, and
you're no longer locked out of the menus, and the context menu stays.
The patch fixes both issues. While the fixed behaviour is consistent
with IE, I'm not particularily fond of it (locking you out of the
toplevel menubar); would it be better, for the first case only, to
allow the user to drag over top level menus but just hide the context
menu appropriately?
| Assignee | ||
Updated•21 years ago
|
Attachment #151125 -
Flags: review?(p_ch)
| Assignee | ||
Comment 20•21 years ago
|
||
Avoid crash on context menu item selection from submenu; blocking
SetCurrentMenuItem(nsnull) seems bad.
Attachment #151125 -
Attachment is obsolete: true
| Assignee | ||
Updated•21 years ago
|
Attachment #151125 -
Flags: review?(p_ch)
Comment 21•21 years ago
|
||
Attachment #151624 -
Flags: review+
| Assignee | ||
Comment 22•21 years ago
|
||
The band-aid fix in patch-1 wasn't correct; the issue was nsIFrames that were
being stored in nsCOMPtr's, and being destroyed while still in a nsCOMPtr.
When the destructor tried to Release, it went boom.
There's still an outstanding issue of keyboard navigation being strange with
context menus, but at least it sort of works now -- hitting ESC with a context
menu active will tear down all open menus, instead of just the context menu
like it's supposed to. Still trying to track down why, but it's not crucial
(i.e. much less broken than before). Hitting TAB also does the same thing
(which is probably wrong behaviour for tab to begin with -- tab on OSX cycles
toplevel menus, which might be better).
| Assignee | ||
Updated•21 years ago
|
Attachment #151624 -
Attachment is obsolete: true
| Assignee | ||
Comment 23•21 years ago
|
||
*** Bug 251536 has been marked as a duplicate of this bug. ***
Comment 24•21 years ago
|
||
Comment on attachment 152084 [details] [diff] [review]
contextmenu-popup-2.patch
I like it, let's get ben to double-up. nsIFrame and nsISupports should be rent
asunder, mayhap.
sr=shaver
Attachment #152084 -
Flags: superreview+
Comment 25•21 years ago
|
||
*** Bug 242251 has been marked as a duplicate of this bug. ***
Comment 26•21 years ago
|
||
I am seeing this annoying one here. Mozilla/5.0 (Windows; U; Windows NT 5.1;
en-US; rv:1.7) Gecko/20040723 Firefox/0.9.1+ (bangbang023)
Comment 27•21 years ago
|
||
*** Bug 253418 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 28•21 years ago
|
||
Comment on attachment 152084 [details] [diff] [review]
contextmenu-popup-2.patch
This sort of got dropped.. any menus gurus want to take a look so I can get it
in?
Attachment #152084 -
Flags: approval-aviary?
Comment 29•21 years ago
|
||
Attachment #152084 -
Flags: approval-aviary? → approval-aviary+
| Assignee | ||
Comment 30•21 years ago
|
||
In on aviary, not sure about r= status for trunk.
Status: NEW → ASSIGNED
Comment 31•21 years ago
|
||
Ben, is still listed as a peer for layout/xul (but who knows how current the
information on the module owners list is). Just to be a safe I would ask another
XUL peer to review this. BZ or Bryner seem like good choices here.
Comment 32•21 years ago
|
||
Comment on attachment 152084 [details] [diff] [review]
contextmenu-popup-2.patch
>+void
>+nsMenuFrame::GetContextMenu(nsIMenuParent** aContextMenu)
>+{
>+ *aContextMenu = nsnull;
>+ if (!nsMenuFrame::sDismissalListener)
>+ return;
>+
>+ nsIMenuParent *menuParent = nsnull;
>+ nsMenuFrame::sDismissalListener->GetCurrentMenuParent(&menuParent);
>+ if (!menuParent)
>+ return;
>+
>+ PRBool isContextMenu;
>+ menuParent->GetIsContextMenu(isContextMenu);
>+ if (isContextMenu) {
>+ *aContextMenu = menuParent;
>+ NS_ADDREF(*aContextMenu);
>+ }
>+}
The menuParent is a frame so the NS_ADDREF is still wrong; also it would make
things much neater if you returned the nsIMenuParent* making
IsContextMenuActive() redundant.
Comment 33•21 years ago
|
||
*** Bug 253757 has been marked as a duplicate of this bug. ***
Comment 34•21 years ago
|
||
Ignore that bogus dupe, I meant to reassign the regression to vlad, not to dupe
it to this bug.
Comment 35•21 years ago
|
||
(In reply to comment #26)
> I am seeing this annoying one here. Mozilla/5.0 (Windows; U; Windows NT 5.1;
> en-US; rv:1.7) Gecko/20040723 Firefox/0.9.1+ (bangbang023)
I am not seeing it with this build: Mozilla/5.0 (Windows; U; Windows NT 5.1;
en-US; rv:1.7) Gecko/20040802 Firefox/0.9.1+ (bangbang023)
Comment 36•21 years ago
|
||
Someone should probably consider trying to get this on the trunk if it is important.
Comment 37•21 years ago
|
||
Adding fixed-aviary1.0 to keywords. Let me know if I'm wrong in doing so.
Never mind, it wouldn't let me.
Comment 38•21 years ago
|
||
Vlad: this is still not in on trunk, but comments 31 and 32 still need to be
addressed.
Assignee: p_ch → vladimir
Status: ASSIGNED → NEW
Keywords: fixed-aviary1.0
Whiteboard: needs-trunk-checkin?
Comment 39•21 years ago
|
||
looks like it has been fixed on the branch, so could somebody please add the
fixed-aviary1.0 keyword?
(i know this is trivial but it would be useful for querying the overall number
of remaining bugs)
Comment 40•21 years ago
|
||
D'OH! Forget my comment!
| Assignee | ||
Updated•21 years ago
|
Flags: blocking-aviary1.0+
Updated•21 years ago
|
Flags: blocking-aviary1.0+
Comment 41•21 years ago
|
||
fareedrizkalla@hotmail.com : Please do not touch the blocking-aviary1.0 flag
other than to request it (?).
Flags: blocking-aviary1.0+
Comment 42•21 years ago
|
||
I get this a lot when i'm accidentally clicking a wrong bookmark and trying to
undo using right click. Like I do in explorer.
1. Click bookmarks
2. Press and hold left mouse over a bookmark (dont move cursor at all)
3. Press and release right mouse
4. Release left mouse
Now you are on the page that you didnt want to go to and the context menu
sticks. You have to click an item to make it go away.
Seems the bookmarks menu should somehow know its child context menu and not
leave it dangling when it goes away itself.
| Assignee | ||
Updated•20 years ago
|
Assignee: vladimir → vladimir+bm
Comment 43•20 years ago
|
||
Comment on attachment 152084 [details] [diff] [review]
contextmenu-popup-2.patch
a=asa for 1.7.5.
Comment 44•20 years ago
|
||
needs aviary landing keyword
Comment 45•20 years ago
|
||
(In reply to comment #44)
> needs aviary landing keyword
This bug is over a year old. It is not an aviary landing bug.
Updated•20 years ago
|
Whiteboard: needs-trunk-checkin? → needs (review and) trunk checkin
Version: unspecified → Trunk
Comment 46•20 years ago
|
||
Still here with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2)
Gecko/20050228 Firefox/1.0+
Updated•20 years ago
|
Flags: blocking-aviary1.1?
Comment 47•20 years ago
|
||
vlad, ben, or mconnor, can one of you land this patch if it hasn't landed and if
it has but the bug is still here, can you obsolete that patch and help us get a
new one?
| Assignee | ||
Comment 48•20 years ago
|
||
I'll rework this for trunk/1.8b2 shortly. I was hoping it would get fixed by
some of bz's recent work in the menupopup stuff, but I guess not...
Comment 49•20 years ago
|
||
vlad says he'll get this.
Assignee: vladimir+bm → vladimir
Flags: blocking-aviary1.1? → blocking-aviary1.1+
Comment 50•20 years ago
|
||
*** Bug 298301 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 51•20 years ago
|
||
Because I like pain, I waited until after the branch to fix this (when I looked
at it originally, I thought my patch wasn't relevant any more.. that turned out
to not be the case).
This seems to fix the problem for me, though once again, I have no idea if its
the right fix or not...
Attachment #192759 -
Flags: review?(bzbarsky)
Comment 52•20 years ago
|
||
So why is this not a problem for other context menus?
| Assignee | ||
Comment 53•20 years ago
|
||
It is, it's just that bookmarks is the only place (I think) where we have a
context menu for a menu item. In virtually all other uses you either have a
normal menu, or you have just a context menu, but not both on screen at the same
time.
Comment 54•20 years ago
|
||
Ah, I see. I'll try to get to this as soon as I can, but I don't know this code
that well, so it might take some time (6-7 days?)
| Assignee | ||
Comment 55•20 years ago
|
||
np, I don't think anyone knows this code all that well :)
If it's any help, virtually the same patch is shipping with the 1.0.x series,
and I haven't heard of any related bugs.
Updated•20 years ago
|
Flags: blocking-aviary1.5+ → blocking1.8b4+
Updated•20 years ago
|
Severity: normal → minor
Updated•20 years ago
|
Whiteboard: needs (review and) trunk checkin → needs (review bzbarsky and) trunk checkin
Comment 56•20 years ago
|
||
OK, I'm not going to be able to review this in any sort of reasonable timeframe.
roc, could you possibly take a look at this?
Attachment #192759 -
Flags: review?(bzbarsky) → review?(roc)
Comment 57•20 years ago
|
||
*** Bug 309160 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Flags: blocking1.8b5+ → blocking1.8b5-
| Assignee | ||
Comment 58•20 years ago
|
||
We shouldn't minus this, it's an extremely annoying bug. We've been shipping
with this patch in 1.0.x; i'm inclined to check it in based on that alone..
Attachment #192759 -
Flags: superreview+
Attachment #192759 -
Flags: review?(roc)
Attachment #192759 -
Flags: review+
Attachment #192759 -
Flags: approval1.8b5?
Comment 59•20 years ago
|
||
as this is a regression over 1.0.x and we have a patch that basically gives us
what we had there, setting the bug as a blocker.
Flags: blocking1.8b5- → blocking1.8b5+
Comment 60•20 years ago
|
||
Comment on attachment 192759 [details] [diff] [review]
1.8 patch
Approved for 1.8b5.
Attachment #192759 -
Flags: approval1.8b5? → approval1.8b5+
| Assignee | ||
Comment 61•20 years ago
|
||
Attaching actual patch that's going in; some de-COM work was done in
nsMenuFrame that my patch did as well, so those bits conflicted. No functional
changes.
| Assignee | ||
Comment 62•20 years ago
|
||
Fixed for good.
Status: NEW → RESOLVED
Closed: 20 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
Whiteboard: needs (review bzbarsky and) trunk checkin
Comment 63•20 years ago
|
||
this caused bug 310480
Comment 64•20 years ago
|
||
I cannot reproduce on main menu. But I can rereproduce on bookmark toolbar. Is
it another bug?
2005100106-trunk/WinXP
| Assignee | ||
Comment 65•20 years ago
|
||
(In reply to comment #64)
> I cannot reproduce on main menu. But I can rereproduce on bookmark toolbar. Is
> it another bug?
>
> 2005100106-trunk/WinXP
Argh. Yeah, that's a slightly different issue. Can you file another bug and
assingn to vladimir@pobox.com? I think I know what the problem is.
Comment 67•20 years ago
|
||
*** Bug 310902 has been marked as a duplicate of this bug. ***
Comment 68•19 years ago
|
||
sorry for bugspam, long-overdue mass reassign of ancient QA contact bugs, filter on "beltznerLovesGoats" to get rid of this mass change
QA Contact: mconnor → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•