b=203183, Bookmarks context menu stays when clicking other menus, sr=shaver, a=ben