mozilla/layout/xul/base/src/nsMenuFrame.cpp
@@ -493,7 +493,16 @@ nsMenuFrame::HandleEvent(nsIPresContext* aPresContext,
 
     // Let the menu parent know we're the new item.
     mMenuParent->SetCurrentMenuItem(this);
-    
+
+    // we need to check if we really became the current menu
+    // item or not
+    nsIMenuFrame *realCurrentItem = nsnull;
+    mMenuParent->GetCurrentMenuItem(&realCurrentItem);
+    if (realCurrentItem != this) {
+      // we didn't (presumably because a context menu was active)
+      return NS_OK;
+    }
+
     // If we're a menu (and not a menu item),
     // kick off the timer.
     if (!IsDisabled() && !isMenuBar && IsMenu() && !mMenuOpen && !mOpenTimer) {
@@ -1302,13 +1311,17 @@ nsMenuFrame::Notify(nsITimer* aTimer)
   // Our timer has fired.
   if (aTimer == mOpenTimer.get()) {
     if (!mMenuOpen && mMenuParent) {
-      nsAutoString active;
-      mContent->GetAttr(kNameSpaceID_None, nsXULAtoms::menuactive, active);
-      if (active.Equals(NS_LITERAL_STRING("true"))) {
-        // We're still the active menu. Make sure all submenus/timers are closed
-        // before opening this one
-        mMenuParent->KillPendingTimers();
-        OpenMenu(PR_TRUE);
+      // make sure we didn't open a context menu in the meantime
+      // (i.e. the user right-clicked while hovering over a submenu)
+      if (!nsMenuFrame::IsContextMenuActive()) {
+        nsAutoString active;
+        mContent->GetAttr(kNameSpaceID_None, nsXULAtoms::menuactive, active);
+        if (active.Equals(NS_LITERAL_STRING("true"))) {
+          // We're still the active menu. Make sure all submenus/timers are closed
+          // before opening this one
+          mMenuParent->KillPendingTimers();
+          OpenMenu(PR_TRUE);
+        }
       }
     }
     mOpenTimer->Cancel();
@@ -2085,3 +2098,32 @@ nsMenuFrame::GetBoxInfo(nsIPresContext* aPresContext, const nsHTMLReflowState& a
 }
 */
 
+void
+nsMenuFrame::GetContextMenu(nsIMenuParent** aContextMenu)
+{
+  *aContextMenu = nsnull;
+  if (!nsMenuFrame::sDismissalListener)
+    return;
+
+  nsIMenuParent *menuParent = nsnull;
+  nsMenuFrame::sDismissalListener->GetCurrentMenuParent(&menuParent);
+  if (!menuParent)
+    return;
+
+  PRBool isContextMenu;
+  menuParent->GetIsContextMenu(isContextMenu);
+  if (isContextMenu) {
+    *aContextMenu = menuParent;
+    NS_ADDREF(*aContextMenu);
+  }
+}
+
+PRBool
+nsMenuFrame::IsContextMenuActive()
+{
+  nsIMenuParent *mp = nsnull;
+  GetContextMenu(&mp);
+  if (mp)
+    return PR_TRUE;
+  return PR_FALSE;
+}
